--- a/views/login.html
+++ b/views/login.html
@@ -7,4 +7,5 @@
     <input type="text" name="name" id="name">
     <label for="passwd">Password : </label>
     <input type="password" name="passwd" id="passwd">
+    <button type="submit">Login</button>
 </form>
